fix: groups now overflow

--- a/src/app/components/table/group/group-row/group.component.css
+++ b/src/app/components/table/group/group-row/group.component.css
@@ -56,3 +56,7 @@ mat-chip p, mat-chip mat-icon {
 p {
   margin: 0;
 }
+
+.table-container {
+  overflow: auto;
+}
